Add conatct page

--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
         <h1>
             Meatballs
         </h1>
+
+        <a href="contact.html">
+            Contact me
+        </a>
     </body>
 </html>
